# lamp

./: .env  .env.template  .envrc  .gitignore  .pylintrc  .tool-versions  .yamllint.yml  Data_Dictionary.md  Dockerfile  LICENSE  README.md  ai_plan.md  docker-compose.yml  parquet_schemas.md  pyproject.toml  test_ingest_devgreen2.py
performance_manager/: Dockerfile  load_vp_events.py  pyproject.toml  startup.py  thing_to_run.py
performance_manager/lib/: __init__.py  gtfs_static_table.py  gtfs_utils.py  l0_gtfs_rt_events.py  l0_gtfs_static_table.py  l0_rt_trip_updates.py  l0_rt_vehicle_positions.py  l1_cte_statements.py  l1_full_trip_events.py  l1_rt_metrics.py  l2_dwell_travel_times.py  l2_headways.py  logging_utils.py  postgres_schema.py  postgres_utils.py  rt_trip_updates.py  rt_vehicle_positions.py  s3_utils.py  static_schedule.py
performance_manager/tests/: demo_events.json  july_17_filepaths.json  test_postgres.py
performance_manager/tests/test_files/lamp/FEED_INFO/timestamp=1669071361/: b4d7a061beba4b5199fd0f4daef101d3-0.parquet
performance_manager/tests/test_files/lamp/ROUTES/timestamp=1669071361/: d2807132bce04e7cb6145c5602b7cc21-0.parquet
performance_manager/tests/test_files/lamp/TRIPS/timestamp=1669071361/: dd8207dafe764266b0254450864b4fc3-0.parquet
py_gtfs_rt_ingestion/: Dockerfile  batch_files.py  dev_test_setup.py  ingest.py  lambda_types.py  pyproject.toml
py_gtfs_rt_ingestion/lib/: __init__.py  batcher.py  config_rt_vehicle.py  convert_gtfs.py  convert_gtfs_rt.py  converter.py  ecs.py  helpers.py  ingest.py  logging_utils.py  postgres_utils.py  s3_utils.py  utils.py
py_gtfs_rt_ingestion/py_gtfs_rt_ingestion/: __init__.py  batcher.py  config_base.py  config_rt_alerts.py  config_rt_bus_trip.py  config_rt_bus_vehicle.py  config_rt_trip.py  config_rt_vehicle.py  config_rt_vehicle_pos.py  configuration.py  convert.py  convert_gtfs.py  convert_gtfs_rt.py  converter.py  converter_factory.py  error.py  gtfs_rt_detail.py  helpers.py  logging_utils.py  postgres_utils.py  s3_utils.py  utils.py
py_gtfs_rt_ingestion/tests/: test_batcher.py  test_configuration.py  test_convert.py  test_gtfs_converter.py  test_gtfs_rt_converter.py  test_ingest.py  test_py_gtfs_rt_ingestion.py  test_s3_utils.py
python_src/: Dockerfile  alembic.ini  ingestion.dockerfile  performance_manager.dockerfile  pyproject.toml
python_src/src/lamp_py/: import_env.py  logging_utils.py
python_src/src/lamp_py/aws/: __init__.py  ecs.py  s3.py
python_src/src/lamp_py/bus_performance_manager/: pipeline.py
python_src/src/lamp_py/ingestion/: README.md  __init__.py  config_busloc_trip.py  config_rt_alerts.py  config_rt_bus_trip.py  config_rt_bus_vehicle.py  config_rt_trip.py  config_rt_vehicle.py  convert_gtfs.py  convert_gtfs_rt.py  converter.py  gtfs_rt_detail.py  gtfs_rt_structs.py  ingest.py  pipeline.py  utils.py
python_src/src/lamp_py/migrations/: env.py
python_src/src/lamp_py/migrations/versions/metadata_prod/: 001_07903947aabe_initial_changes.py  07903947aabe_initial_changes.py
python_src/src/lamp_py/migrations/versions/metadata_staging/: 001_07903947aabe_initial_changes.py  07903947aabe_initial_changes.py
python_src/src/lamp_py/migrations/versions/performance_manager/: 001_be4c10c548f0_initial_rds_schema.py  001aa247c451_add_trip_id_to_trips.py  006_7f4bbec1b669_static_trips_branch_and_trunk_route_id_.py  007_ed73250b7656_add_scheduled_metrics.py  012_ced3caaeab23_add_static_directions.py  013_97f5fb821b8a_start_date_to_service_date.py  015_4fe83fd4091d_timestamp_to_static_version_key.py  016_171891fde1cf_create_opmi_all_fields_view.py  017_37d97f420d54_add_prev_and_next_trip_stops.py  018_a4870e30ec68_remove_hash_columns.py  018_e2399b814cd7_fix_trip_id_length.py  2e9d81949da8_trips_and_metrics_processing_updates.py  43153d536c2a_feed_info_init_date_trigger.py  695ef31623ae_rt_trunk_id_and_route_id_processing.py  7f4bbec1b669_static_trips_branch_and_trunk_route_id_.py  98aa70293578_add_heather_honorary_view.py  9d3515f1386e_add_vehicle_info_to_trips.py  be4c10c548f0_initial_rds_schema.py  c514f5b5e389_add_calendar_dates_table.py  de55dc40315d_fix_flow_static_loading.py
python_src/src/lamp_py/migrations/versions/performance_manager_dev/: 003_ae6c6e4b2df5_extend_service_id_view.py  (+5 more)
python_src/src/lamp_py/performance_manager/: README.md  __init__.py  flat_file.py  gtfs_utils.py  l0_gtfs_rt_events.py  l0_gtfs_static_load.py  l0_gtfs_static_mod.py  l0_gtfs_static_table.py  l0_rt_trip_updates.py  l0_rt_vehicle_positions.py  l1_cte_statements.py  l1_rt_metrics.py  l1_rt_trips.py  pipeline.py
python_src/src/lamp_py/postgres/: __init__.py  metadata_schema.py  postgres_schema.py  postgres_utils.py  rail_performance_manager_schema.py  seed_metadata.py  snapshot.py
python_src/src/lamp_py/publishing/: index.html  performancedata.py
python_src/src/lamp_py/runtime_utils/: alembic_migration.py  env_validation.py  import_env.py  process_logger.py
python_src/src/lamp_py/scripts/: start_ingestion.py
python_src/src/lamp_py/startup/: __init__.py  start_ingestion.py  start_performance_manager.py
python_src/src/lamp_py/tableau/: README.md  __init__.py  hyper.py  pipeline.py  server.py
python_src/src/lamp_py/tableau/jobs/: gtfs_rail.py  rt_rail.py
python_src/tests/: conftest.py  test_gtfs_converter.py  test_gtfs_rt_converter.py  test_postgres.py  test_resources.py  test_s3_utils.py
python_src/tests/aws/: test_s3_utils.py
python_src/tests/ingestion/: test_configuration.py  test_gtfs_converter.py  test_gtfs_rt_converter.py  test_ingest.py  test_py_gtfs_rt_ingestion.py
python_src/tests/performance_manager/: test_performance_manager.py
python_src/tests/test_files/: april_2023_filepaths.json  ingestion_GTFS-RT_ALERT.parquet  ingestion_GTFS-RT_TU.parquet  ingestion_GTFS-RT_TU_OLD.parquet  ingestion_GTFS-RT_VP.parquet  ingestion_GTFS-RT_VP_OLD.parquet  july_17_filepaths.json  pipeline_flat_out.csv  tu_missing_start_date.parquet  vehicle_positions_flat_input.csv  vp_missing_start_date.csv  vp_missing_start_time.csv
python_src/tests/test_files/INCOMING/: large_page_obj_response.json
(+508 files in other folders)
