[tool.poetry]
name = "lamp_py"
version = "0.1.0"
description = "Lightweight Application for Monitoring Performance"
authors = [
  "MBTA CTD <developer@mbta.com>",
  "Ryan Rymarczyk <rrymarczyk@mbta.com>",
  "Mike Zappitello <mzappitello@mbta.com>",
  "Henry Huang <hhuang@mbta.com>",
]

[tool.poetry.scripts]
ingestion = 'lamp_py.ingestion.pipeline:start'
performance_manager = 'lamp_py.performance_manager.pipeline:start'
bus_performance_manager = 'lamp_py.bus_performance_manager.pipeline:start'
seed_metadata = 'lamp_py.postgres.seed_metadata:run'
hyper_update = 'lamp_py.tableau.pipeline:start_hyper_updates'
transit_master_ingestion = 'lamp_py.ingestion_tm.pipeline:start'
ad_hoc = 'lamp_py.ad_hoc.pipeline:start'
lightswitch = 'lamp_py.publishing.lightswitch:pipeline'

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.30"
pyarrow = "^21.0"
cffi = "^1.17.0"
boto3 = "^1.35.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
psycopg2 = "^2.9.10"
psutil = "^5.9.8"
schedule = "^1.1.0"
alembic = "^1.18.1"
types-pytz = "^2024.1.0.20240203"
pyodbc = "^5.2.0"
duckdb = "^1.4.2"
polars = "1.36.1"

[tool.poetry.group.tableau]
optional = false

[tool.poetry.group.tableau.dependencies]
tableauhyperapi = "^0.0.21408"
tableauserverclient = "0.30"

[tool.poetry.group.investigation]
optional = true

[tool.poetry.group.investigation.dependencies]
ipykernel = "^7.1.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
tabulate = "^0.9.0"
marimo = "^0.16"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.1.1"
pylint = "^3.2.6"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.8.0"
types-python-dateutil = "^2.9.0.20240316"
pytest-env = "^1.1.3"
dataframely = "^2.4.0"
duckdb = "^1.4"
ruff = "^0.14.11"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["union-attr"]
plugins = ["sqlalchemy.ext.mypy.plugin"]
pretty = true
python_version = "3.12"
warn_unreachable = true
warn_unused_ignores = true
exclude = ["investigation/", "runners", "analysis/", "tests/bus_performance_manager/validate_schedule.py"]

[tool.pytest]
log_cli = true
log_cli_level = "DEBUG"
verbose = true

[tool.pytest.ini_options]
env = [
  "SPRINGBOARD_BUCKET=SPRINGBOARD",
  "PUBLIC_ARCHIVE_BUCKET=PUBLIC_ARCHIVE",
  "INCOMING_BUCKET=INCOMING",
]

[tool.pylint]
disable = [
  # disable doc string requirements
  "missing-module-docstring",
  # allow catching a generic exception
  "broad-except",
  # caught by black
  "line-too-long",
  # we're logging everything so its "ok"
  "lost-exception",
  # for some reason Iterable[type] is triggering this error on github
  "unsubscriptable-object",
  # Converter abstract base class only has one common function
  "too-few-public-methods",
  # l1_rt_trips.py over 1000 lines
  "too-many-lines",
  # fstring negligable performance issues in logging - keep
  "logging-fstring-interpolation",
  # dataframely uses classmethods for rules
  "no-self-argument",
]
good-names = ["e", "i", "s"]
max-line-length = 120
min-similarity-lines = 10
# ignore session maker as it gives pylint fits
# https://github.com/PyCQA/pylint/issues/7090
ignored-classes = ['sqlalchemy.orm.session.sessionmaker', 'pyarrow.compute']
# ignore the migrations directory. its going to have duplication and _that is ok_.
ignore-paths = ["^src/lamp_py/migrations/.*$", "src/lamp_py/tableau/spare/*"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = [
    ".egg-info",
    ".git",
    ".git-rewrite",
    ".ipynb",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
]
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["D","E","F","N","W"]
ignore = [
    "BLE001", # "blind-except" - broad except in pylint rules,
    "E501", # "line-too-long",
    "B012", # "lost-exception",
    "D100",  # "missing-module-docstring",
    #"C0302", # "too-many-lines" - l1_rt_trips.py over 1000 lines
    "D100", # Missing docstring in public module
    "D203", # conflicts with (D211) `no-blank-line-before-class` 
    "D212", # conflicts with (D213) `multi-line-summary-second-line` 
    "D400", # First line should end with a period
    "D415", # First line should end with a period, question mark, or exclamation point
    "D413", # conflicts with (D412)
    "G004", # "logging-fstring-interpolation" - fstring negligable performance issues in logging - keep
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["dataframely.rule"] 
