[tool.poetry]
name = "performance_manager"
version = "0.1.0"
description = "Compare Static Schedule and Real Time GTFS"
authors = ["MBTA CTD <developer@mbta.com>",
           "Mike Zappitello <mzappitello@mbta.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyarrow = "^8.0.0"
boto3 = "^1.23.3"
pandas = "^1.4.3"
numpy = "^1.23.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
