[tool.poetry]
name = "py_gtfs_rt_ingestion"
version = "0.1.0"
description = "Ingest JSON Data and Convert it to Parquet Data"
authors = ["MBTA CTD <developer@mbta.com>",
           "Mike Zappitello <mzappitello@mbta.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyarrow = "^8.0.0"
boto3 = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pandas = "^1.4.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
