[tool.poetry]
name = "py_gtfs_rt_ingestion"
version = "0.1.0"
description = "Ingest JSON Data and Convert it to Parquet Data"
authors = ["MBTA CTD <developer@mbta.com>",
           "Mike Zappitello <mzappitello@mbta.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyarrow = "^8.0.0"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]
boto3 = "^1.23.3"
pytest = "^5.2"
pandas = "^1.4.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
pylint = "^2.14.1"
mypy = "^0.961"
awscli = "^1.25.8"

[tool.black]
line-length = 80
target-version = ['py39']

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_unreachable = true
pretty = true

[tool.pylint]
disable = [
  # disable doc string requirements
  "missing-module-docstring",
  # allow catching a generic exception
  "broad-except",
  # caught by black
  "line-too-long",
]
good-names = ["e", "i"]
max-line-length = 80
min-similarity-lines = 10

[tool.pytest]
log_cli = true
log_cli_level = "DEBUG"
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
