[tool.poetry]
name = "lamp_py"
version = "0.1.0"
description = "Lightweight Application for Monitoring Performance"
authors = [
  "MBTA CTD <developer@mbta.com>",
  "Ryan Rymarczyk <rrymarczyk@mbta.com>",
  "Mike Zappitello <mzappitello@mbta.com>",
]

[tool.poetry.scripts]
ingestion = 'lamp_py.ingestion.pipeline:start'
performance_manager = 'lamp_py.performance_manager.pipeline:start'
bus_performance_manager = 'lamp_py.bus_performance_manager.pipeline:start'
seed_metadata = 'lamp_py.postgres.seed_metadata:run'
snapshot = 'lamp_py.postgres.snapshot:run'
hyper_update = 'lamp_py.tableau.pipeline:start_hyper_updates'

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.25"
pyarrow = "^15.0.0"
boto3 = "^1.34.39"
pandas = "^1.4.3"
numpy = "^1.23.1"
psycopg2 = "^2.9.3"
psutil = "^5.9.8"
schedule = "^1.1.0"
alembic = "^1.10.2"
types-pytz = "^2024.1.0.20240203"

[tool.poetry.group.tableau]
optional = false

[tool.poetry.group.tableau.dependencies]
tableauhyperapi = "^0.0.18618"
tableauserverclient = "0.30"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.1.1"
pylint = "^3.0.3"
pytest = "^8.0.0"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py310']

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
pretty = true
python_version = "3.10"
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest]
log_cli = true
log_cli_level = "DEBUG"
verbose = true

[tool.pylint]
disable = [
  # disable doc string requirements
  "missing-module-docstring",
  # allow catching a generic exception
  "broad-except",
  # caught by black
  "line-too-long",
  # we're logging everything so its "ok"
  "lost-exception",
  # for some reason Iterable[type] is triggering this error on github
  "unsubscriptable-object",
  # Converter abstract base class only has one common function
  "too-few-public-methods",
]
good-names = ["e", "i", "s"]
max-line-length = 80
min-similarity-lines = 10
# ignore session maker as it gives pylint fits
# https://github.com/PyCQA/pylint/issues/7090
ignored-classes = ['sqlalchemy.orm.session.sessionmaker', 'pyarrow.compute']
# ignore the migrations directory. its going to have duplication and _that is ok_.
ignore-paths = ["^src/lamp_py/migrations/.*$"]
